fix assets list amount overflow

--- a/src/app/components/TokensTabs/Assets/Assets.module.scss
+++ b/src/app/components/TokensTabs/Assets/Assets.module.scss
@@ -70,4 +70,9 @@
 
 .assetInfoValue {
    font-weight: 600;
+
+   > span {
+      font-weight: 600;
+      word-break: break-all;
+   }
 }
